--- a/server/package.json
+++ b/server/package.json
@@ -37,5 +37,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemailer": "^6.7.5"
+  },
+  "engines": {
+    "node": ">=14.x",
+    "npm": "7.x",
+    "yarn": ">=1.19.0 < 2.0.0"
   }
 }
